Handle symlinks when using git destination reader checkout.
The destination reader checkout path does not go through Git checkout, but navigates the tree and writes files. This means that symlinks need to be handled manually for Git destinations. This path is currently only used for merge import mode.

BUG=392084554
PiperOrigin-RevId: 719349858
Change-Id: I6de9afe6320f2b2056d97a3f1e8ffd0ce8dc9111